--- a/index.html
+++ b/index.html
@@ -11,55 +11,66 @@
         <link rel="stylesheet" href="./Content/app.css">
     </head>
     <body>
-        <!--Navigation Section-->
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                <a class="navbar-brand" id="logo" href="index.html"><img src="Assets/Images/Logo.svg" alt="Logo"></a>
-                </div>
+        <header>
+            <!--Navigation Section-->
+            <nav class="navbar navbar-fixed-top">
+                <div class="container-fluid">
+                    <div class="col-md-8 col-md-offset-2">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">Brand</a>
+                        </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html"><i class="fa fa-user fa-lg"></i> About Me </a></li>
-                    <li><a href="contact.html"><i class="fa fa-envelope fa-lg"></i> Contact</a></li>
-                    <li><a href="projects.html"><i class="fa fa-briefcase fa-lg"></i> Projects</a></li>
-                </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="index.html"><i class="fa fa-user fa-lg"></i> About Me </a></li>
+                                <li><a href="contact.html"><i class="fa fa-envelope fa-lg"></i> Contact</a></li>
+                                <li><a href="projects.html"><i class="fa fa-briefcase fa-lg"></i> Projects</a></li>
+                            </ul>
+                        </div><!-- /.navbar-collapse -->
+                    </div>
+                </div><!-- /.container-fluid -->
+            </nav>
+        </header><!-- /header -->
 
         <!--Main Content-->
-        <div class="container" id="aboutMe">
-            <div class="row">
-                <div class="col-md-3" id="personalImage"></div>
-                <div class="col-md-9">
-                    <h2 id="whoAmI"></h2>
-                    <p id="shortParagraph"></p>
-                </div>
-            </div>
-        </div>
+        <!-- /main content -->
 
         <!--Footer Section-->
-        <nav class="navbar navbar-default navbar-fixed-bottom">
-            <div class="container">
-                <div class="col-md-4 col-md-offset-4">
-                    <div>
-                        <a href="https://www.facebook.com/daniel.ramos.1257604" target="_blank" class="socialMedia"><i class="fa fa-facebook-square fa-2x"></i></a>
-                        <a href="https://www.linkedin.com/in/daniel-ramos-5a464831/" target="_blank" class="socialMedia"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                        <a href="https://github.com/danielRamosGithub" target="_blank" class="socialMedia"><i class="fa fa-github fa-2x"></i></a>    
+        <footer>
+            <nav class="navbar navbar-fixed-bottom">
+                <div class="row">
+                    <div class="col-md-4 col-md-offset-4">
+                        <div class="col-md-1 col-xs-1 col-sm-1 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
+                            <a href="https://www.facebook.com/daniel.ramos.1257604" target="_blank" class="socialMedia"><i class="fa fa-facebook-square fa-2x"></i></a>
+                        </div>
+                        <div class="col-md-1 col-xs-1 col-sm-1 ">
+                            <a href="https://www.linkedin.com/in/daniel-ramos-5a464831/" target="_blank" class="socialMedia"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                        </div>
+                        <div class="col-md-1 col-xs-1 col-sm-1 ">
+                            <a href="https://github.com/danielRamosGithub" target="_blank" class="socialMedia"><i class="fa fa-github fa-2x"></i></a>
+                        </div>
+                        <div class="col-md-1 col-xs-1 col-sm-1 ">
+                            <a href="https://twitter.com/itsmeDaniRamos" target="_blank" class="socialMedia"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                        </div>
                     </div>
-                    <h5>&copy Daniel Ramos Mini-Portfolio - All rights reserved</h5>
                 </div>
-            </div>
-        </nav>
+                <div class="row">
+                    <div class="col-md-4 col-md-offset-4">
+                        <p><small>&copy Daniel Ramos Mini-Portfolio - All rights reserved</small></p>
+                    </div>
+                </div>
+            </nav>    
+        </footer><!-- /footer -->
+        
+
     <!--JavaScript Section-->
     <script src="./Scripts/lib/jquery/dist/jquery.min.js"></script>
     <script src="./Scripts/lib/bootstrap/dist/js/bootstrap.min.js"></script>
