about page modifications

--- a/projects.html
+++ b/projects.html
@@ -33,4 +33,37 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row" id="projects">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="Assets/Images/project-1.png" alt="project 1">
+                        <div class="caption">
+                            <h4 id="project1captionH4"></h4>
+                            <p id="project1captionP"></p>
+                            <p><a href="http://movieposterassignment3.azurewebsites.net/assignment3/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="Assets/Images/project-2.png" alt="project 2">
+                        <div class="caption">
+                            <h4 id="project2captionH4"></h4>
+                            <p id="project2captionP"></p>
+                            <p><a href="http://navigationwithlistsassignment4.azurewebsites.net/assignment4/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="Assets/Images/project-3.png" alt="project 3">
+                        <div class="caption">
+                            <h4 id="project3captionH4"></h4>
+                            <p id="project3captionP"></p>
+                            <p><a href="http://comp1030module13.azurewebsites.net/m/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
