--- a/index.html
+++ b/index.html
@@ -59,25 +59,27 @@
         <!--Footer Section-->
         <footer>
             <nav class="navbar navbar-fixed-bottom">
-                <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
-                        <div class="col-md-1 col-xs-1 col-sm-1 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
-                            <a href="https://www.facebook.com/daniel.ramos.1257604" target="_blank" class="socialMedia"><i class="fa fa-facebook-square fa-2x"></i></a>
-                        </div>
-                        <div class="col-md-1 col-xs-1 col-sm-1 ">
-                            <a href="https://www.linkedin.com/in/daniel-ramos-5a464831/" target="_blank" class="socialMedia"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                        </div>
-                        <div class="col-md-1 col-xs-1 col-sm-1 ">
-                            <a href="https://github.com/danielRamosGithub" target="_blank" class="socialMedia"><i class="fa fa-github fa-2x"></i></a>
-                        </div>
-                        <div class="col-md-1 col-xs-1 col-sm-1 ">
-                            <a href="https://twitter.com/itsmeDaniRamos" target="_blank" class="socialMedia"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 col-lg-4 col-lg-offset-4 col-md-offset-4">
+                            <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1 col-lg-offset-4 col-md-offset-4 col-sm-offset-4 col-xs-offset-4">
+                                <a href="https://www.facebook.com/daniel.ramos.1257604" target="_blank" class="socialMedia"><i class="fa fa-facebook-square fa-2x"></i></a>
+                            </div>
+                            <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1">
+                                <a href="https://www.linkedin.com/in/daniel-ramos-5a464831/" target="_blank" class="socialMedia"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                            </div>
+                            <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1">
+                                <a href="https://github.com/danielRamosGithub" target="_blank" class="socialMedia"><i class="fa fa-github fa-2x"></i></a>
+                            </div>
+                            <div class="col-md-1 col-xs-1 col-sm-1 col-lg-1">
+                                <a href="https://twitter.com/itsmeDaniRamos" target="_blank" class="socialMedia"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
-                        <p><small>&copy Daniel Ramos Mini-Portfolio - All rights reserved</small></p>
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+                            <p><small>&copy Daniel Ramos Mini-Portfolio - All rights reserved</small></p>
+                        </div>
                     </div>
                 </div>
             </nav>    
