adjusts to the projects pages; added more projects; little adjust to index.html and app.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Mini PortFolio</title>
+        <title>PortFolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--My CSS Section-->
@@ -11,14 +11,7 @@
         <link rel="stylesheet" href="./Content/app.css">
     <!--Script from 3wSchools to help load html from other html files-->
     <script src="https://www.w3schools.com/lib/w3data.js"></script>
-    <!--<script>
-        function show_Pages(show, hidden1, hidden2) {
-        document.getElementById("show").style.display = "block";
-        document.getElementById("hidden1").style.display = "none";
-        document.getElementById("hidden2").style.display = "none";
-        return false;
-    }
-    </script>-->
+
     </head>
     <body>
         <header>
@@ -34,7 +27,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#">Brand</a>
+                            <a class="navbar-brand" href="#">Daniel</a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
