--- a/projects.html
+++ b/projects.html
@@ -1,69 +1,67 @@
-        <!--Main Content-->
-        <div class="container">
-            <h1>My Projects</h1>
-            <div class="row" id="projects">
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="Assets/Images/project-1.png" alt="project 1">
-                        <div class="caption">
-                            <h4 id="project1captionH4"></h4>
-                            <p id="project1captionP"></p>
-                            <p><a href="http://movieposterassignment3.azurewebsites.net/assignment3/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="Assets/Images/project-2.png" alt="project 2">
-                        <div class="caption">
-                            <h4 id="project2captionH4"></h4>
-                            <p id="project2captionP"></p>
-                            <p><a href="http://navigationwithlistsassignment4.azurewebsites.net/assignment4/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="Assets/Images/project-3.png" alt="project 3">
-                        <div class="caption">
-                            <h4 id="project3captionH4"></h4>
-                            <p id="project3captionP"></p>
-                            <p><a href="http://comp1030module13.azurewebsites.net/m/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-            <div class="row" id="projects">
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="Assets/Images/project-1.png" alt="project 1">
-                        <div class="caption">
-                            <h4 id="project1captionH4"></h4>
-                            <p id="project1captionP"></p>
-                            <p><a href="http://movieposterassignment3.azurewebsites.net/assignment3/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="Assets/Images/project-2.png" alt="project 2">
-                        <div class="caption">
-                            <h4 id="project2captionH4"></h4>
-                            <p id="project2captionP"></p>
-                            <p><a href="http://navigationwithlistsassignment4.azurewebsites.net/assignment4/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
-                    </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="Assets/Images/project-3.png" alt="project 3">
-                        <div class="caption">
-                            <h4 id="project3captionH4"></h4>
-                            <p id="project3captionP"></p>
-                            <p><a href="http://comp1030module13.azurewebsites.net/m/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
-                        </div>
-                    </div>
+    <div class="row">
+        <h1>My Projects</h1>
+    </div>
+    
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Assets/Images/project-6.png" alt="project 3">
+                <div class="caption">
+                    <h4><strong>Project:</strong> How sweet it is</h4>
+                    <p>Design a landing page for my favourite candy</p>
+                    <p><a href="http://comp1054-w2017-assignment2.azurewebsites.net/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
                 </div>
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Assets/Images/project-5.png" alt="project 3">
+                <div class="caption">
+                    <h4><strong>Project:</strong> Typefaces for the Screen</h4>
+                    <p>Using CSS-based text-sizing techniques and more.</p>
+                    <p><a href="http://comp1054-w2017-assignment1.azurewebsites.net/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Assets/Images/project-4.png" alt="project 2">
+                <div class="caption">
+                    <h4><strong>Project:</strong> Mini Portfolio Sample Site</h4>
+                    <p>Develop a mini portfolio with html, css and Js.</p>
+                    <p><a href="http://comp1073-w2017-assignment2.azurewebsites.net/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Assets/Images/project-1.png" alt="project 1">
+                <div class="caption">
+                    <h4><strong>Project:</strong> Movie Poster</h4>
+                    <p>Movie poster using online HTML and CSS.</p>
+                    <p><a href="http://movieposterassignment3.azurewebsites.net/assignment3/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Assets/Images/project-2.png" alt="project 2">
+                <div class="caption">
+                    <h4><strong>Project:</strong> Navigation with lists</h4>
+                    <p>Sample website using lists.</p>
+                    <p><a href="http://navigationwithlistsassignment4.azurewebsites.net/assignment4/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="Assets/Images/project-3.png" alt="project 3">
+                <div class="caption">
+                    <h4><strong>Project:</strong> Responsive design</h4>
+                    <p>Reponsive layout good for any type of device.</p>
+                    <p><a href="http://comp1030module13.azurewebsites.net/m/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
+                </div>
+            </div>
+        </div>
+    </div> 
