changing the projects page. more responsive and better looking

--- a/projects.html
+++ b/projects.html
@@ -2,66 +2,60 @@
     <div class="row">
         <h1>My Projects</h1>
     </div>
-    
-    <div class="row">
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="Assets/Images/project-6.png" alt="project 3">
-                <div class="caption">
-                    <h4><strong>Project:</strong> How sweet it is</h4>
-                    <p>Design a landing page for my favourite candy</p>
-                    <p><a href="http://comp1054-w2017-assignment2.azurewebsites.net/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
+
+    <div class="container-fluid">
+        <div class="row">
+
+            <!--Projects-->
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
+                    <img src="Assets/Images/project-6.png" class="image">
+                    <div class="overlay">
+                        <div class="text"><a href="">Hello World</a></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="Assets/Images/project-5.png" alt="project 3">
-                <div class="caption">
-                    <h4><strong>Project:</strong> Typefaces for the Screen</h4>
-                    <p>Using CSS-based text-sizing techniques and more.</p>
-                    <p><a href="http://comp1054-w2017-assignment1.azurewebsites.net/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
+             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
+                    <img src="Assets/Images/project-5.png" class="image">
+                    <div class="overlay">
+                        <div class="text"><a href="">Hello World</a></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="Assets/Images/project-4.png" alt="project 2">
-                <div class="caption">
-                    <h4><strong>Project:</strong> Mini Portfolio Sample Site</h4>
-                    <p>Develop a mini portfolio with html, css and Js.</p>
-                    <p><a href="http://comp1073-w2017-assignment2.azurewebsites.net/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
+                    <img src="Assets/Images/project-4.png" class="image ">
+                    <div class="overlay">
+                        <div class="text"><a href="">Hello World</a></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="Assets/Images/project-1.png" alt="project 1">
-                <div class="caption">
-                    <h4><strong>Project:</strong> Movie Poster</h4>
-                    <p>Movie poster using online HTML and CSS.</p>
-                    <p><a href="http://movieposterassignment3.azurewebsites.net/assignment3/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
+                    <img src="Assets/Images/project-1.png" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="">Hello World</a></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="Assets/Images/project-2.png" alt="project 2">
-                <div class="caption">
-                    <h4><strong>Project:</strong> Navigation with lists</h4>
-                    <p>Sample website using lists.</p>
-                    <p><a href="http://navigationwithlistsassignment4.azurewebsites.net/assignment4/" class="btn btn-primary" target="_blank" role="button">Check the work</a></p>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
+                    <img src="Assets/Images/project-2.png" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="">Hello World</a></div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="Assets/Images/project-3.png" alt="project 3">
-                <div class="caption">
-                    <h4><strong>Project:</strong> Responsive design</h4>
-                    <p>Reponsive layout good for any type of device.</p>
-                    <p><a href="http://comp1030module13.azurewebsites.net/m/" target="_blank" class="btn btn-primary" role="button">Check the work</a></p>
+             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
+                    <img src="Assets/Images/project-3.png" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="">Hello World</a></div>
+                    </div>
                 </div>
             </div>
+
         </div>
-    </div> 
+    </div>
+     
