--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
             </div>
             <div class="col-md-6">
                 <p><i class="fa fa-chevron-right" aria-hidden="true"></i> All about technology</p>
-                <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Shy.. just before met someone</p>
                 <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Always eager to learn more</p>
+                <p><!--<i class="fa fa-chevron-right" aria-hidden="true"></i> Shy.. just before met someone--></p>
             </div>
         </div>
 
