finished projects with new and better layout, new projects.

--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,17 @@
             <!--Projects-->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
+                    <img src="Assets/Images/project-7.png" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="/Assets/projects/project_7/mobile-nav.html" target="_blank">Responsive Navigation <br /> Flex box</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
                     <img src="Assets/Images/project-6.png" class="image">
                     <div class="overlay">
-                        <div class="text"><a href="">Hello World</a></div>
+                        <div class="text"><a href="http://comp1054-w2017-assignment2.azurewebsites.net/" target="_blank">How sweet it is</a></div>
                     </div>
                 </div>
             </div>
@@ -19,7 +27,7 @@
                 <div class="project thumbnail">
                     <img src="Assets/Images/project-5.png" class="image">
                     <div class="overlay">
-                        <div class="text"><a href="">Hello World</a></div>
+                        <div class="text"><a href="http://comp1054-w2017-assignment1.azurewebsites.net/" target="_blank">Typefaces for the Screen</a></div>
                     </div>
                 </div>
             </div>
@@ -27,7 +35,7 @@
                 <div class="project thumbnail">
                     <img src="Assets/Images/project-4.png" class="image ">
                     <div class="overlay">
-                        <div class="text"><a href="">Hello World</a></div>
+                        <div class="text"><a href="http://comp1073-w2017-assignment2.azurewebsites.net/" target="_blank">Sample Site using Ajax</a></div>
                     </div>
                 </div>
             </div>
@@ -35,7 +43,7 @@
                 <div class="project thumbnail">
                     <img src="Assets/Images/project-1.png" class="image img-responsive">
                     <div class="overlay">
-                        <div class="text"><a href="">Hello World</a></div>
+                        <div class="text"><a href="http://movieposterassignment3.azurewebsites.net/assignment3/" target="_blank">Movie Poster</a></div>
                     </div>
                 </div>
             </div>
@@ -43,7 +51,7 @@
                 <div class="project thumbnail">
                     <img src="Assets/Images/project-2.png" class="image img-responsive">
                     <div class="overlay">
-                        <div class="text"><a href="">Hello World</a></div>
+                        <div class="text"><a href="http://navigationwithlistsassignment4.azurewebsites.net/assignment4/" target="_blank">Sample website using lists</a></div>
                     </div>
                 </div>
             </div>
@@ -51,11 +59,10 @@
                 <div class="project thumbnail">
                     <img src="Assets/Images/project-3.png" class="image img-responsive">
                     <div class="overlay">
-                        <div class="text"><a href="">Hello World</a></div>
+                        <div class="text"><a href="http://comp1030module13.azurewebsites.net/m/" target="_blank">Reponsive layout <br /> media queries</a></div>
                     </div>
                 </div>
             </div>
 
         </div>
     </div>
-     
