--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4 col-md-offset-4">
-                            <p><small>&copy Daniel Ramos Mini-Portfolio - All rights reserved</small></p>
+                            <p><small>&copy Daniel Ramos Portfolio - All rights reserved</small></p>
                         </div>
                     </div>
                 </div>
