--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,17 @@
             <!--Projects-->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
+                    <img src="Assets/Images/project-8.png" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="/Assets/projects/project_8/mobile-nav.html" target="_blank">Responsive Navigation <br /> Flex box</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
                     <img src="Assets/Images/project-7.png" class="image img-responsive">
                     <div class="overlay">
-                        <div class="text"><a href="/Assets/projects/project_7/mobile-nav.html" target="_blank">Responsive Navigation <br /> Flex box</a></div>
+                        <div class="text"><a href="/Assets/projects/project_7/index.html" target="_blank">Button done with css</a></div>
                     </div>
                 </div>
             </div>
