--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <div class="col-md-12">
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Over three year's experience working with Java in a developer position.</p>
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Excellent developer using HTML5, CSS3 and Javascript technologies to develop various websites focusing on user experience.</p>
-                    <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Proven ability using Photoshop and Illustrator for vairous College projects.</p>
+                    <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Proven ability using Photoshop and Illustrator for various College projects.</p>
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Developing college and personal projects using C# for the last 6 months.</p>
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Certified in JEE 6 Application Development, Advanced Java, Web Application development and PHP and MySql by Framework Systems.</p>
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Certified in Facebook Ads and Google Adwords by Mercado E-Commerce.</p>
