adding two more projects(PSD to bootstrap, Interface Components)

--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,22 @@
             <!--Projects-->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
+                    <img src="Assets/Images/project-10.png" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="/Assets/projects/project_10/index.html" target="_blank">test test test <br /> Flex box</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
+                    <img src="Assets/Images/project-9.png" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="/Assets/projects/project_9/index.html" target="_blank">PSD to Bootstrap <br /> responsive <br /> Flex box</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
                     <img src="Assets/Images/project-8.png" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="/Assets/projects/project_8/mobile-nav.html" target="_blank">Responsive Navigation <br /> Flex box</a></div>
