adding more content to the text of project 10, so the javscript features could work properly for the porpose of the project.

--- a/Assets/projects/project_10/index.html
+++ b/Assets/projects/project_10/index.html
@@ -41,6 +41,24 @@
 					<p>With all its sham, drudgery, and broken dreams, it is still a beautiful world. Be cheerful. Strive to be happy.</p>
 
 					<p><cite>–Max Ehrmann</cite></p>
+
+					<h2>Desiderata History</h2>
+
+					<p>Max Ehrmann, a poet and lawyer from Terre Haute, Indiana, wrote Desiderata in 1927. Meaning “things that are desired,” Ehrmann wrote it for himself, he said, “Because it counsels those virtues I felt most in need of.” These virtues have been valued by countless others as Desiderata rose in popularity in the late sixties and early seventies. It is making a strong comeback today, as parents and grandparents are passing along this wisdom to their loved ones.</p>
+
+					<p>The Desiderata history is an interesting one, as there has been confusion surrounding the origin of this poem. It is often mistaken that it was written by an anonymous author in 1692 and was found in Old Saint Paul’s Church.</p> 
+
+					<p>The Rev. Frederick Ward Kates was the rector of the church from 1956 to 1961. During that time he used the words of Desiderata in a mimeographed booklet he gave to his parishioners to read. On the cover of the booklet was the church’s name and year it was founded: “Old Saint Paul’s Church, Baltimore, 1692.” The two became inextricably linked and even today it is hard to tear them apart.</p>
+
+					<p>Further questioning the authorship, when Adlai Stevenson died in 1965, a copy of Desiderata was found by his bedside. He was preparing to use it in personal Christmas cards that year. He attributed the poem to an unknown 17th century author.</p>
+
+					<p>A Baltimore authority on early English literature said, “This work, as it reads now, was not written in 1692. The words are not those of the seventeenth century, nor is the composition.”</p>
+
+					<p>Another confusion is often in the ending of the piece. One of the changes was from the original “Be cheerful” to “Be careful,” which is not in the spirit of Ehrmann’s writings.</p>
+
+					<p>Max Ehrmann copyrighted his work in 1927. He died in 1945. Three years later his widow included Desiderata in The Poems of Max Ehrmann, published in 1948 by the Bruce Humphries Publishing Company, of Boston. In 1967 Robert L. Bell, acquired the publishing rights from Bruce Humphries Publishing Company, where he was president, and then bought the copyright from Richard Wright, nephew and heir to the Ehrmann works.</p>
+
+					<p>But in 1976, a U.S. Court of Appeals ruled that Ehrmann had forfeited his copyright by allowing a friend to distribute Desiderata without copyright notices. Still, in some courts the copyright has been upheld, and Les Crane, who had recorded a spoken word version, had to pay royalties, adding to the confusing stories surrounding Desiderata.</p>
 				</blockquote>
 			</div> <!-- #content -->
 			<footer>
