add the images for the new project (9 and 10)

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
                 <div class="project thumbnail">
                     <img src="Assets/Images/project-10.png" class="image img-responsive">
                     <div class="overlay">
-                        <div class="text"><a href="/Assets/projects/project_10/index.html" target="_blank">test test test <br /> Flex box</a></div>
+                        <div class="text"><a href="/Assets/projects/project_10/index.html" target="_blank">Interface Components <br /> Javscript/CSS</a></div>
                     </div>
                 </div>
             </div>
@@ -19,7 +19,7 @@
                 <div class="project thumbnail">
                     <img src="Assets/Images/project-9.png" class="image img-responsive">
                     <div class="overlay">
-                        <div class="text"><a href="/Assets/projects/project_9/index.html" target="_blank">PSD to Bootstrap <br /> responsive <br /> Flex box</a></div>
+                        <div class="text"><a href="/Assets/projects/project_9/index.html" target="_blank">PSD to Bootstrap <br /> responsive</a></div>
                     </div>
                 </div>
             </div>
