--- a/Assets/projects/project_9/index.html
+++ b/Assets/projects/project_9/index.html
@@ -11,25 +11,35 @@
 <body>
 
 	<div class="safe-area">
-		<div class="container">
-			<header>
-				<div class="header">
+		<header>
+			<div class="header">
+				<div class="container">
 					<div class="row">
 						<div class="col-8">
 							<img src="img/logo.png" alt="logo">
 						</div>
-						<div class="col-4">
-							<ul class="nav">
-								<li class="nav-item"><a class="nav-link" href="#">Features</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">Support</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-							</ul>
-						</div>
-					</div>
-				</div> <!-- div header -->
-			</header>
+						<div class="col-4 d-flex justify-content-md-end">
+							<div class="navbar-toggleable-md">
+								<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+									<i class="fa fa-bars"></i>
+								</button>
 
-			<div id="carousel" class="carousel slide">
+								<div class="callapse navbar-collapse" id="navbarSupportedContent">
+									<ul class="navbar-nav">
+										<li class="nav-item"><a class="nav-link" href="#">Features</a></li>
+										<li class="nav-item"><a class="nav-link" href="#">Support</a></li>
+										<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+									</ul>
+								</div> <!-- Collapse -->
+							</div> <!--  navbar-toggleable-->
+						</div>
+					</div> <!-- row -->
+				</div> <!-- container -->
+			</div> <!-- div header -->
+		</header>
+
+		<div id="carousel" class="carousel slide">
+			<div class="container">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<div class="row">
@@ -68,8 +78,8 @@
 						<li data-target="#carousel" data-slide-to="1"></li>
 					</ol>
 				</div> <!-- carousel-inner -->
-			</div> <!-- carousel -->
-		</div> <!-- div container -->
+			</div>  <!-- div container -->
+		</div> <!-- carousel -->
 	</div>  <!-- safe area -->
 
 	<section>
@@ -80,7 +90,7 @@
 
 				<!--row 1-->
 				<div class="row">
-					<div class="col">
+					<div class="col-lg-4 col-md-6">
 						<article>
 							<div class="feature-item">
 								<i class="fa fa-3x fa-tablet"></i>
@@ -94,7 +104,7 @@
 						</article>
 					</div> <!-- col1 -->
 
-					<div class="col">
+					<div class="col-lg-4 col-md-6">
 						<article>
 							<div class="feature-item">
 								<i class="fa fa-3x fa-lemon-o"></i>
@@ -108,7 +118,7 @@
 						</article>
 					</div> <!-- col4 -->
 
-					<div class="col">
+					<div class="col-lg-4 col-md-6">
 						<article>
 							<div class="feature-item">
 								<i class="fa fa-3x fa-folder-o"></i>
@@ -121,11 +131,8 @@
 							</div> <!-- feature-item -->
 						</article>
 					</div> <!-- col3 -->
-				</div> <!-- row 1 -->
-
-				<!--row 2-->
-				<div class="row">
-					<div class="col">
+				
+					<div class="col-lg-4 col-md-6">
 						<article>
 							<div class="feature-item">
 								<i class="fa fa-3x fa-code"></i>
@@ -139,7 +146,7 @@
 						</article>
 					</div> <!-- col1 -->
 
-					<div class="col">
+					<div class="col-lg-4 col-md-6">
 						<article>
 							<div class="feature-item">
 								<i class="fa fa-3x fa-envelope-o"></i>
@@ -153,7 +160,7 @@
 						</article>
 					</div> <!-- col4 -->
 
-					<div class="col">
+					<div class="col-lg-4 col-md-6">
 						<article>
 							<div class="feature-item">
 								<i class="fa fa-3x fa-bookmark-o"></i>
@@ -166,7 +173,7 @@
 							</div> <!-- feature-item -->
 						</article>
 					</div> <!-- col3 -->
-				</div> <!-- row 2 -->
+				</div> <!-- row 1 -->
 			</div>
 		</div> <!-- feature -->
 	</section>
@@ -178,10 +185,10 @@
 				<p class="description text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</p>
 				<form action="#" method="post">
 					<div class="row">
-						<div class="col-6 offset-lg-2">
+						<div class="col-lg-6 col-md-5 offset-2">
 							<input type="text" class="form-control form-control-lg" placeholder="Enter your email to update">
 						</div>
-						<div class="col-2">
+						<div class="col-lg-2 col-md-3">
 							<button class="btn btn-block btn-lg btn-warning">Submit</button>
 						</div>
 					</div> <!-- row -->
