adjusts to make the app reponsive on mobile phones

--- a/Assets/projects/project_9/index.html
+++ b/Assets/projects/project_9/index.html
@@ -52,7 +52,7 @@
 								</div><!-- wrapper-carousel -->
 							</div> <!-- col text -->
 							<div class="col">
-								<img src="img/ipad.png" alt="ipad" class="mx-auto d-block img-fluid">
+								<img src="img/ipad.png" alt="ipad" class="img-item mx-auto d-block img-fluid">
 							</div> <!-- col img -->
 						</div> <!-- row -->
 					</div><!-- carousel item -->
@@ -68,7 +68,7 @@
 								</div><!-- wrapper-carousel -->
 							</div> <!-- col text -->
 							<div class="col">
-								<img src="img/ipad.png" alt="ipad" class="mx-auto d-block img-fluid">
+								<img src="img/ipad.png" alt="ipad" class="img-item mx-auto d-block img-fluid">
 							</div> <!-- col img -->
 						</div> <!-- row -->
 					</div> <!-- carousel item -->
@@ -185,7 +185,7 @@
 				<p class="description text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</p>
 				<form action="#" method="post">
 					<div class="row">
-						<div class="col-lg-6 col-md-5 offset-2">
+						<div class="col-lg-6 col-md-5 offset-lg-2 offset-md-2">
 							<input type="text" class="form-control form-control-lg" placeholder="Enter your email to update">
 						</div>
 						<div class="col-lg-2 col-md-3">
