--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
         <div class="row">
             <div class="col-md-12">
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Over three year's experience working with Java in a developer position.</p>
+                    <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Over a year experience working in projects using PHP an MySql.</p>
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Excellent developer using HTML5, CSS3 and Javascript technologies to develop various websites focusing on user experience.</p>
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Proven ability using Photoshop and Illustrator for various College projects.</p>
                     <p><i class="fa fa-chevron-right" aria-hidden="true"></i> Developing college and personal projects using C# for the last 6 months.</p>
