changing the website for better performace

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
             <!--Projects-->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-10.png" class="image img-responsive">
+                    <img src="Assets/Images/project-10.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="/Assets/projects/project_10/index.html" target="_blank">Interface Components <br /> Javscript/CSS</a></div>
                     </div>
@@ -17,7 +17,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-9.png" class="image img-responsive">
+                    <img src="Assets/Images/project-9.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="/Assets/projects/project_9/index.html" target="_blank">PSD to Bootstrap <br /> responsive</a></div>
                     </div>
@@ -25,7 +25,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-8.png" class="image img-responsive">
+                    <img src="Assets/Images/project-8.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="/Assets/projects/project_8/mobile-nav.html" target="_blank">Responsive Navigation <br /> Flex box</a></div>
                     </div>
@@ -33,7 +33,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-7.png" class="image img-responsive">
+                    <img src="Assets/Images/project-7.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="/Assets/projects/project_7/index.html" target="_blank">Button done with css</a></div>
                     </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-6.png" class="image">
+                    <img src="Assets/Images/project-6.jpg" class="image">
                     <div class="overlay">
                         <div class="text"><a href="http://comp1054-w2017-assignment2.azurewebsites.net/" target="_blank">How sweet it is</a></div>
                     </div>
@@ -49,7 +49,7 @@
             </div>
              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-5.png" class="image">
+                    <img src="Assets/Images/project-5.jpg" class="image">
                     <div class="overlay">
                         <div class="text"><a href="http://comp1054-w2017-assignment1.azurewebsites.net/" target="_blank">Typefaces for the Screen</a></div>
                     </div>
@@ -57,7 +57,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-4.png" class="image ">
+                    <img src="Assets/Images/project-4.jpg" class="image ">
                     <div class="overlay">
                         <div class="text"><a href="http://comp1073-w2017-assignment2.azurewebsites.net/" target="_blank">Sample Site using Ajax</a></div>
                     </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-1.png" class="image img-responsive">
+                    <img src="Assets/Images/project-1.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="http://movieposterassignment3.azurewebsites.net/assignment3/" target="_blank">Movie Poster</a></div>
                     </div>
@@ -73,7 +73,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-2.png" class="image img-responsive">
+                    <img src="Assets/Images/project-2.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="http://navigationwithlistsassignment4.azurewebsites.net/assignment4/" target="_blank">Sample website using lists</a></div>
                     </div>
@@ -81,7 +81,7 @@
             </div>
              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
-                    <img src="Assets/Images/project-3.png" class="image img-responsive">
+                    <img src="Assets/Images/project-3.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="http://comp1030module13.azurewebsites.net/m/" target="_blank">Reponsive layout <br /> media queries</a></div>
                     </div>
