--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,14 @@
             <!--Projects-->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
                 <div class="project thumbnail">
+                    <img src="Assets/Images/project-11.jpg" class="image img-responsive">
+                    <div class="overlay">
+                        <div class="text"><a href="/Assets/projects/project_11/index.php" target="_blank">CRUD application with PHP</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 project-container">
+                <div class="project thumbnail">
                     <img src="Assets/Images/project-10.jpg" class="image img-responsive">
                     <div class="overlay">
                         <div class="text"><a href="/Assets/projects/project_10/index.html" target="_blank">Interface Components <br /> Javscript/CSS</a></div>
